Update README to require Java 25 and add usage instructions